# rust-yew-2048

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
docs/: index.md
src/: game.rs  lib.rs  main.rs  state.rs
src/component/: game_case.rs  game_container.rs  game_line.rs  game_panel.rs  mod.rs  score_panel.rs
static/: index.html
static/style/: main.css
