[package]
name = "rust-1024"
version = "0.1.0"
authors = ["chunlinwang <chunlinwang1983@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
wasm-bindgen = "0.2.67"
gloo = "0.3.0"
rand = "0.8.3"
getrandom = { version = "0.2", features = ["js"] }
wasm-logger = "0.2.0"
strum = "0.20"
strum_macros = "0.20"
serde = "1"
serde_derive = "1"

[lib]
crate-type = ["cdylib", "rlib"]